[package]
authors = ["Paul Gilbert"]
categories = ["embedded", "no-std"]
description = "DHT-11 on bluepill (or optionally blackpill)"
keywords = ["driver", "i2c", "DHT-11"]
license = "MIT OR Apache-2.0"
name = "hw_dht11"
version = "0.1.0"
edition = "2021"

[dependencies]

#stm32f1xx-hal = { git = "https://github.com/stm32-rs/stm32f1xx-hal", optional = true }
stm32f1xx-hal = { version = "0.10.0", optional = true }
#stm32f4xx-hal = { git = "https://github.com/stm32-rs/stm32f4xx-hal", optional = true } 
stm32f4xx-hal = { version = "0.17.1", optional = true }

#dht-sensor    = { git = "https://github.com/michaelbeaumont/dht-sensor", branch = "main"}
dht-sensor    = { version = "0.2.1"}

#ssd1306         = { git = "https://github.com/jamwaffles/ssd1306"  }  
ssd1306         = { version = "0.8.1"}

#cortex-m-rtic = "2.0.1" 
cortex-m-rtic = "1.1.4" 
#cortex-m-rtic = { git = "https://github.com/rtic-rs/cortex-m-rtic" }

systick-monotonic = {version = "1.0.1", optional = true }
#systick-monotonic = { git = "https://github.com/rtic-rs/systick-monotonic.git", optional = true }

# for duration timer in rtic
fugit = { version = "0.3.3", optional = true }
#fugit = { git = "https://github.com/korken89/fugit", optional = true }

embedded-hal = {version = "0.2.4" }

embedded-graphics = "0.8.1"

shared-bus = { version = "0.3.0", features = ["cortex-m"] } 
#shared-bus = {  git = "https://github.com/Rahix/shared-bus", features = ["cortex-m"] } 
heapless = "0.7"
nb = "0.1.2"
libm = "0.2"
cortex-m = "0.7"
cortex-m-rt = "0.7.0"


panic-rtt-target = { version =  "0.1.1", features = ["cortex-m"] }
rtt-target = { version =  "0.3.1", features = ["cortex-m"] }


cortex-m-semihosting = { version = "0.5.0" }
panic-semihosting    = { version = "0.6.0" }
panic-reset          = { version = "0.1.0" }
panic-halt           = { version = "0.2.0" }
void                 = { version = "1.0.2", default-features = false } # err return values in some hals


[features]
stm32f1xx = ["stm32f1xx-hal/rt", "systick-monotonic"]
stm32f4xx = ["stm32f4xx-hal/rt", "systick-monotonic"]

stm32f103     = ["stm32f1xx-hal/stm32f103",    "stm32f1xx-hal/medium"]
stm32f401     = ["stm32f4xx-hal/stm32f401"  ] 
stm32f411     = ["stm32f4xx-hal/stm32f411"  ] 

